# Muslim-Prayer-Companion

./: .devcontainer.json  .pre-commit-config.yaml  LICENSE  README.md  configuration.yaml  hacs.json  pyproject.toml  requirements.txt
.devcontainer/: .devcontainer.json  Dockerfile  devcontainer.json
.github/workflows/: release.yml  test.yml
custom_components/muslim-companion/: __init__.py  const.py  manifest.json
custom_components/muslim-prayer-companion/: README.md  __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
custom_components/muslim-prayer-companion/translations/: en.json
custom_components/muslim_prayer_companion/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py
custom_components/muslim_prayer_companion/translations/: en.json
tests/: setup-test.sh  test_helpers.py  test_integration.py
