[tool.poetry]
name = "muslim_prayer_companion"
version = "1.0.0"
description = "This is a custom component to provide Muslim prayer times and notifications in Home Assistant."
authors = [
  "Abdelrahman Maharek abdelrahman.mahareek@gmail.com",
]
license = "Apache-2.0"
packages = [
    { include = "custom_components/muslim_prayer_companion" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
aiohttp = ">=3.8.1"
packaging = ">=20.3"

[tool.poetry.group.dev.dependencies]
homeassistant = ">=2024.10.3"
pytest-homeassistant-custom-component = ">=0.13.174"
black = { version = ">=21.12b0", allow-prereleases = true }
pre-commit = ">=2.11.1"
prospector = { extras = ["with_all"], version = ">=1.8.3" }
pytest-cov = "*"
safety = ">=3.2.9"
pytest = ">6.2.2"
codespell = ">2.0.0"
yamllint = ">1.26.0"
pyupgrade = "^3.3.1"
ruff = "0.9.6"
prayer_times_calculator = "0.0.12"
hijri-converter = "2.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | deps
)
'''

[tool.codespell]
skip = './.*,*.csv,*.json,*.lock'
quiet-level = 2
ignore-words-list = "hass"

[pytest]
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.bandit]
skips = ["B101", "B404", "B603"]
